--- a/k8s/operator/templates/sdp-operator-deployment.yaml
+++ b/k8s/operator/templates/sdp-operator-deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
+  {{- if .Values.sdp.sdpOperator.annotations }}
+  annotations:
+  {{- toYaml .Values.sdp.sdpOperator.annotations | nindent 4 }}
+  {{- end}}
 spec:
   replicas: 1
   selector:
