--- a/k8s/operator/templates/git-operator-deployment.yaml
+++ b/k8s/operator/templates/git-operator-deployment.yaml
@@ -19,6 +19,10 @@ spec:
     metadata:
       labels:
         {{- include "sdp-operator.selectorLabels" . | nindent 8 }}
+      {{- if .Values.sdp.gitOperator.podAnnotations }}
+      annotations:
+      {{- toYaml .Values.sdp.gitOperator.podAnnotations | nindent 8 }}
+      {{- end}}
     spec:
       {{- with .Values.sdp.gitOperator.image.pullSecrets }}
       imagePullSecrets:
