--- a/k8s/operator/templates/rbac.yaml
+++ b/k8s/operator/templates/rbac.yaml
@@ -71,7 +71,7 @@ subjects:
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
-  name: {{ include "sdp-operator.fullname" . }}-role
+  name: {{ include "sdp-operator.fullname" . }}-r
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
 {{- end }}
