--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -119,6 +119,7 @@ sdp:
       mainBranch: ""
       baseBranch: ""
       repository: ""
+      repositoryFork: ""
       hostname: ""
       sshPort: ""
       strictHostKeyChecking: true
