Rename GIT_DUMP_DIR env to GIT_CLONE_DIR env

--- a/k8s/operator/templates/git-operator-deployment.yaml
+++ b/k8s/operator/templates/git-operator-deployment.yaml
@@ -118,7 +118,7 @@ spec:
               value: {{ .Values.sdp.gitOperator.git.sshKeyFingerprintPath }}
             {{- end}}
             {{- if .Values.sdp.gitOperator.git.clonePath }}
-            - name: GIT_DUMP_PATH_ENV
+            - name: GIT_CLONE_PATH_ENV
               value: {{ .Values.sdp.gitOperator.git.clonePath }}
             {{- end}}
             {{- if .Values.sdp.externalSecret.enabled }}
