--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -126,6 +126,7 @@ sdp:
       sshKeyPath: ""
       sshKeyFingerprintPath: ""
       clonePath: ""
+      entitiesPath: ""
     ## @param sdp.gitOperator.image.tag The image tag of the operator.
     ## @param sdp.gitOperator.image.pullPolicy The image pull policy of the operator.
     ## @param sdp.gitOperator.image.repository The repository to pull the operator image from.
