--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ aiosignal==1.3.1
     # via aiohttp
 apischema==0.18.0
     # via -r requirements.in
+argon2-cffi==23.1.0
+    # via minio
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
 async-timeout==4.0.3
     # via aiohttp
 attrs==23.1.0
@@ -25,6 +29,7 @@ certifi==2023.7.22
     #   requests
 cffi==1.16.0
     # via
+    #   argon2-cffi-bindings
     #   cryptography
     #   pynacl
 charset-normalizer==3.3.0
@@ -55,7 +60,7 @@ idna==3.4
     #   yarl
 kubernetes==28.1.0
     # via -r requirements.in
-minio==7.1.17
+minio==7.2.0
     # via -r requirements.in
 multidict==6.0.4
     # via
@@ -73,6 +78,8 @@ pyasn1-modules==0.3.0
     # via google-auth
 pycparser==2.21
     # via cffi
+pycryptodome==3.19.0
+    # via minio
 pygithub==1.59.1
     # via -r requirements.in
 pyhcl==0.4.5
@@ -109,7 +116,7 @@ smmap==5.0.1
     # via gitdb
 typedload==2.26
     # via -r requirements.in
-urllib3==1.26.17
+urllib3==1.26.18
     # via
     #   kubernetes
     #   minio
