TODO for libgnutls CVE

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,7 +8,7 @@ COPY requirements.txt /appgate
 RUN apt-get update && \
     apt-get install --yes \
         git \
-        # CVE-2023-5981
+        # TODO: Remove when CVE-2023-5981 is resolved in upstream debian
         libgnutls30=3.7.9-2+deb12u1 && \
     apt-get remove curl && \
     apt-get clean && \
