--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -4,36 +4,159 @@
 #
 #    pip-compile requirements-build.in
 #
+aiohttp==3.9.1
+    # via -r ./requirements.in
+aiosignal==1.3.1
+    # via aiohttp
+apischema==0.18.1
+    # via -r ./requirements.in
+argon2-cffi==23.1.0
+    # via minio
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
+attrs==23.1.0
+    # via
+    #   -r ./requirements.in
+    #   aiohttp
 black==22.12.0
     # via -r requirements-build.in
-click==8.1.3
+cachetools==5.3.2
+    # via google-auth
+certifi==2023.11.17
+    # via
+    #   kubernetes
+    #   minio
+    #   requests
+cffi==1.16.0
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
+    #   pynacl
+charset-normalizer==3.3.2
+    # via requests
+click==8.1.7
     # via black
+cryptography==41.0.7
+    # via
+    #   -r ./requirements.in
+    #   pyjwt
+deprecated==1.2.14
+    # via pygithub
+frozenlist==1.4.0
+    # via
+    #   aiohttp
+    #   aiosignal
+gitdb==4.0.11
+    # via gitpython
+gitpython==3.1.40
+    # via -r ./requirements.in
+google-auth==2.25.1
+    # via kubernetes
+hvac==1.2.1
+    # via -r ./requirements.in
+idna==3.6
+    # via
+    #   requests
+    #   yarl
 iniconfig==2.0.0
     # via pytest
-mypy==0.991
-    # via -r requirements-build.in
-mypy-extensions==0.4.4
+kubernetes==28.1.0
+    # via -r ./requirements.in
+minio==7.2.0
+    # via -r ./requirements.in
+multidict==6.0.4
     # via
-    #   -r requirements-build.in
+    #   aiohttp
+    #   yarl
+mypy==1.7.1
+    # via -r requirements-build.in
+mypy-extensions==1.0.0
+    # via
     #   black
     #   mypy
-packaging==23.0
+oauthlib==3.2.2
+    # via
+    #   kubernetes
+    #   requests-oauthlib
+packaging==23.2
     # via pytest
-pathspec==0.10.3
+pathspec==0.11.2
     # via black
-platformdirs==2.6.2
+platformdirs==4.1.0
     # via black
-pluggy==0.13.1
+pluggy==1.3.0
     # via pytest
-pytest==7.4.2
+pyasn1==0.5.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.3.0
+    # via google-auth
+pycparser==2.21
+    # via cffi
+pycryptodome==3.19.0
+    # via minio
+pygithub==2.1.1
+    # via -r ./requirements.in
+pyhcl==0.4.5
+    # via hvac
+pyjwt[crypto]==2.8.0
+    # via pygithub
+pynacl==1.5.0
+    # via pygithub
+pytest==7.4.3
     # via -r requirements-build.in
-types-python-dateutil==2.8.19
+python-dateutil==2.8.2
+    # via
+    #   kubernetes
+    #   pygithub
+python-gitlab==3.15.0
+    # via -r ./requirements.in
+pyyaml==6.0.1
+    # via kubernetes
+requests==2.31.0
+    # via
+    #   hvac
+    #   kubernetes
+    #   pygithub
+    #   python-gitlab
+    #   requests-oauthlib
+    #   requests-toolbelt
+requests-oauthlib==1.3.1
+    # via kubernetes
+requests-toolbelt==1.0.0
+    # via python-gitlab
+rsa==4.9
+    # via google-auth
+six==1.16.0
+    # via
+    #   kubernetes
+    #   python-dateutil
+smmap==5.0.1
+    # via gitdb
+typedload==2.26
+    # via -r ./requirements.in
+types-python-dateutil==2.8.19.14
     # via -r requirements-build.in
-types-pyyaml==6.0.1
+types-pyyaml==6.0.12.12
     # via -r requirements-build.in
-types-requests==2.28.11.7
+types-requests==2.31.0.6
     # via -r requirements-build.in
-types-urllib3==1.26.25.4
+types-urllib3==1.26.25.14
     # via types-requests
-typing-extensions==4.4.0
-    # via mypy
+typing-extensions==4.8.0
+    # via
+    #   mypy
+    #   pygithub
+urllib3==1.26.18
+    # via
+    #   kubernetes
+    #   minio
+    #   pygithub
+    #   requests
+websocket-client==1.7.0
+    # via kubernetes
+wrapt==1.16.0
+    # via deprecated
+yarl==1.9.4
+    # via aiohttp
