--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -125,6 +125,7 @@ sdp:
       strictHostKeyChecking: true
       sshKeyPath: ""
       sshKeyFingerprintPath: ""
+      sshKnownHostsFile: ""
       clonePath: ""
     ## @param sdp.gitOperator.image.tag The image tag of the operator.
     ## @param sdp.gitOperator.image.pullPolicy The image pull policy of the operator.
