--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,9 +7,7 @@ COPY requirements.txt /appgate
 
 RUN apt-get update && \
     apt-get install --yes \
-        git \
-        # TODO: Remove when CVE-2023-5981 is resolved in upstream debian
-        libgnutls30=3.7.9-2+deb12u1 && \
+        git && \
     apt-get remove curl && \
     apt-get clean && \
     apt-get autoclean && \
