--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -10,9 +10,9 @@ click==8.1.3
     # via black
 iniconfig==2.0.0
     # via pytest
-mypy==0.991
+mypy==1.17.0
     # via -r requirements-build.in
-mypy-extensions==0.4.4
+mypy-extensions==1.1.0
     # via
     #   -r requirements-build.in
     #   black
@@ -20,7 +20,9 @@ mypy-extensions==0.4.4
 packaging==23.0
     # via pytest
 pathspec==0.10.3
-    # via black
+    # via
+    #   black
+    #   mypy
 platformdirs==2.6.2
     # via black
 pluggy==0.13.1
@@ -35,5 +37,5 @@ types-requests==2.28.11.7
     # via -r requirements-build.in
 types-urllib3==1.26.25.4
     # via types-requests
-typing-extensions==4.4.0
+typing-extensions==4.14.1
     # via mypy
